--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,130 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+/*  */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgb(37, 37, 37);
+  /* border: 1px solid black; */
+  font-family: 'Faustina', serif;
+}
+.parent {
+  height: 150vh;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  padding: 2%;
+}
+
+.nav {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid rgb(143, 143, 143);
+  box-shadow: 2px 2px 5px black;
+  position: relative;
+  z-index: 1;
+}
+.left {
+  flex: 1;
+  font: 26px italic;
+  font-weight: 700;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  flex: 2;
+}
+.right {
+  flex: 1;
+  display: flex;
+}
+#bogo,
+#directions {
+  flex: 1;
+  text-align: center;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.banner {
+  background-color: rgba(117, 223, 126, 0.479);
+  position: sticky;
+  top: 0;
+  height: 25px;
+
+  text-align: center;
+}
+.menu {
+  min-height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+}
+
+.search {
+  order: -1;
+  flex: 1 1 100px;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+}
+#search-bar {
+  align-self: center;
+}
+
+.dropdowns {
+  flex: 4 1 400px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.beer,
+.wine,
+.liquor,
+.cordial {
+  font-size: 18px;
+  flex: 1 1 125px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: white;
+}
+
+#search-bar {
+  border-radius: 10px;
+  padding: 1%;
+}
+
+.body {
+  flex: 1 1 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: column; */
+  justify-content: space-between;
+}
+
+.body div {
+  flex: 1 1 300px;
+}
+
+.footer {
+  background: rgb(140, 157, 255);
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +161,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
