--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
-/*  */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
+/*
+ font-family: 'Nunito', sans-serif;
+ font-family: 'Faustina', serif;
+ */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: rgb(37, 37, 37);
-  /* border: 1px solid black; */
-  font-family: 'Faustina', serif;
+  color: rgb(41, 50, 65);
+  font-family: 'Nunito', sans-serif;
 }
 .parent {
   height: 150vh;
-}
-.content {
   display: flex;
   flex-direction: column;
+}
+.content {
   padding: 2%;
 }
 
@@ -24,46 +28,74 @@
   height: 100px;
   display: flex;
   justify-content: center;
-  text-align: center;
-  border: 2px solid rgb(143, 143, 143);
-  box-shadow: 2px 2px 5px black;
+  border-radius: 10px;
   position: relative;
   z-index: 1;
 }
 .left {
-  flex: 1;
-  font: 26px italic;
-  font-weight: 700;
-
+  flex: 0.3;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.left-center {
+  flex: 2;
+  padding-left: 2%;
+}
+
+.logo-text {
+  white-space: nowrap;
+  font-family: 'Faustina', serif;
+  color: rgb(41, 50, 65);
+  font-weight: 700;
+  font-style: italic;
+  font-size: 36px;
 }
 
 .center {
-  flex: 2;
+  flex: 1;
 }
 .right {
   flex: 1;
   display: flex;
-}
-#bogo,
-#directions {
-  flex: 1;
-  text-align: center;
-  display: flex;
-
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
 }
 
+#directions,
+#bogo {
+  flex: 1;
+  text-align: center;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid red; */
+}
+#directions-link {
+  text-decoration: none;
+}
+
+#directions:hover,
+#bogo:hover {
+  /* border: 2px solid red; */
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px rgb(61, 90, 128);
+}
+
 .banner {
-  background-color: rgba(117, 223, 126, 0.479);
+  background-color: rgb(238, 108, 77);
   position: sticky;
   top: 0;
   height: 25px;
-
+  z-index: 2;
   text-align: center;
+}
+
+#banner-text {
+  color: white;
+  font-size: 16px;
+  text-shadow: 1px 1px rgb(41, 50, 65);
 }
 .menu {
   min-height: 50px;
@@ -71,48 +103,78 @@
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .search {
   order: -1;
-  flex: 1 1 100px;
+  /* flex: 1 1; */
   align-self: center;
   display: flex;
   justify-content: center;
+  margin: 1%;
 }
 #search-bar {
+  font-family: 'Nunito', sans-serif;
+  border: 1px solid rgb(41, 50, 65);
+  outline: none;
   align-self: center;
+  /* width: 150px; */
+  box-sizing: border-box;
+  padding-left: 10px;
+  border-radius: 10px;
 }
 
 .dropdowns {
-  flex: 4 1 400px;
+  margin-left: 2%;
+  margin-right: 2%;
+
+  display: grid;
+  grid-template-columns: 150px 150px;
+  /* flex: 1 1 200px;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-evenly; */
 }
 
 .beer,
 .wine,
 .liquor,
 .cordial {
-  font-size: 18px;
-  flex: 1 1 125px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  white-space: nowrap;
+  font-weight: 300;
+  font-size: 22px;
+  text-transform: uppercase;
+
+  margin-left: 2%;
+  margin-right: 2%;
+
   border: none;
+  outline: none;
   background-color: white;
+  border-radius: 5px;
+
+  transition: 0.25s ease;
 }
 
-#search-bar {
-  border-radius: 10px;
-  padding: 1%;
+.beer:hover,
+.beer:focus,
+.wine:hover,
+.wine:focus,
+.liquor:hover,
+.liquor:focus,
+.cordial:hover,
+.cordial:focus {
+  box-shadow: 1px 1px 6px rgb(61, 90, 128);
+  font-style: italic;
 }
 
 .body {
   flex: 1 1 1000px;
   display: flex;
   flex-wrap: wrap;
-  /* flex-direction: column; */
   justify-content: space-between;
 }
 
