--- a/src/App.css
+++ b/src/App.css
@@ -8,83 +8,31 @@
  */
 
 * {
+  overflow-x: hidden;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   color: rgb(41, 50, 65);
   font-family: 'Nunito', sans-serif;
 }
+
+/* Includes N.av and M.enu */
 .parent {
   height: 150vh;
   display: flex;
   flex-direction: column;
 }
+
+/* B.ody Only. B.anner/F.ooter not included here */
 .content {
   padding: 2%;
 }
 
-.nav {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  border-radius: 10px;
-  position: relative;
-  z-index: 1;
-}
-.left {
-  flex: 0.3;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-}
-
-.left-center {
-  flex: 2;
-  padding-left: 2%;
-}
-
-.logo-text {
-  white-space: nowrap;
-  font-family: 'Faustina', serif;
-  color: rgb(41, 50, 65);
-  font-weight: 700;
-  font-style: italic;
-  font-size: 36px;
-}
-
-.center {
-  flex: 1;
-}
-.right {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-#directions,
-#bogo {
-  flex: 1;
-  text-align: center;
-  text-decoration: none;
-  justify-content: center;
-  align-items: center;
-  /* border: 2px solid red; */
-}
-#directions-link {
-  text-decoration: none;
-}
-
-#directions:hover,
-#bogo:hover {
-  /* border: 2px solid red; */
-  border-radius: 10px;
-  box-shadow: 3px 3px 10px rgb(61, 90, 128);
-}
-
+/* /////////////////////////////////////
+B.anner - With message */
 .banner {
   background-color: rgb(238, 108, 77);
+  width: 100%;
   position: sticky;
   top: 0;
   height: 25px;
@@ -93,63 +41,161 @@
 }
 
 #banner-text {
+  white-space: nowrap;
   color: white;
   font-size: 16px;
   text-shadow: 1px 1px rgb(41, 50, 65);
 }
-.menu {
-  min-height: 50px;
+
+/* End B.anner
+////////////////////////////////////////////// */
+
+/* ////////////////////////////////////////////
+N.av Bar                   */
+/* flex grid - 
+.left           golf icon     -100px
+.left-center    logo text     -300px
+.center         white space   -auto?
+.right          connect divs  -200px (+padding)
+*/
+
+.nav * {
+  /* border: 1px solid pink; */
+}
+
+.nav {
+  /* border: 2px solid red; */
   width: 100%;
+  border-radius: 10px;
+
+  position: relative;
+  z-index: 1;
+
   display: flex;
-  flex-direction: row-reverse;
   flex-wrap: wrap;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.left {
+  /* border: 1px solid purple; */
+  align-self: flex-end;
+  justify-content: center;
+
+  display: flex;
+}
+
+.left-center {
+  /* border: 1px solid pink; */
+}
+
+.logo-text {
+  /* border: 1px solid purple; */
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  white-space: nowrap;
+  font-family: 'Faustina', serif;
+  color: rgb(41, 50, 65);
+  font-weight: 700;
+  font-style: italic;
+  font-size: 36px;
+}
+
+/* can this tag be removed at viewwidth < 500px? */
+.white-space-fill {
+  /* border: 1px solid pink; */
+  flex: 1;
+}
+.right {
+  display: flex;
+  flex-direction: row;
+}
+
+#directions,
+#connect {
+  /* border: 1px solid blue; */
+  height: 100px;
+  width: 90px;
+  text-decoration: none;
+
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
+  display: flex;
+  flex-direction: column;
+  white-space: nowrap;
+}
+#directions-link {
+  text-decoration: none;
+  padding-top: 6px;
+}
+
+#directions:hover,
+#connect:hover {
+  /* border: 2px solid red; */
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px rgb(61, 90, 128);
+}
+/* End N.av
+///////////////////////////////////////////// */
+
+/* ////////////////////////////////////////////
+M.ENU BAR - Product dropdowns, search          */
+
+.menu {
+  /* border: 1px solid pink; */
+  /* min-height: 50px; */
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: center;
 }
 
 .search {
-  order: -1;
-  /* flex: 1 1; */
+  /* border: 2px solid red; */
+  /* order: -1; */
   align-self: center;
   display: flex;
   justify-content: center;
   margin: 1%;
 }
 #search-bar {
-  font-family: 'Nunito', sans-serif;
-  border: 1px solid rgb(41, 50, 65);
+  /* font-family: 'Nunito', sans-serif; */
+  /* border: 1px solid rgb(41, 50, 65); */
   outline: none;
-  align-self: center;
+  /* align-self: center; */
   /* width: 150px; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   padding-left: 10px;
   border-radius: 10px;
 }
 
 .dropdowns {
-  margin-left: 2%;
-  margin-right: 2%;
+  /* border: 1px solid blue; */
 
-  display: grid;
-  grid-template-columns: 150px 150px;
-  /* flex: 1 1 200px;
+  margin: 10px 0;
   display: flex;
-  justify-content: space-evenly; */
+  flex: 0 1 560px;
+  justify-content: space-evenly;
 }
 
 .beer,
 .wine,
 .liquor,
 .cordial {
+  /* flex: 1 1 135px; */
   white-space: nowrap;
   font-weight: 300;
-  font-size: 22px;
+  font-size: 18px;
   text-transform: uppercase;
+  padding: 0 5px;
 
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-left: 2px;
+  margin-right: 2px;
 
   border: none;
   outline: none;
@@ -170,6 +216,11 @@
   box-shadow: 1px 1px 6px rgb(61, 90, 128);
   font-style: italic;
 }
+/* END M.ENU BAR 
+/////////////////////////////////////////*/
+
+/* //////////////////////////////////////
+Body - Images, Sales                   */
 
 .body {
   flex: 1 1 1000px;
@@ -182,45 +233,12 @@
   flex: 1 1 300px;
 }
 
+/* End Body
+//////////////////////////////////////// */
+
+/* //////////////////////////////////////
+Footer */
+
 .footer {
   background: rgb(140, 157, 255);
 }
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
