--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@media only screen and (max-width: 550px) {
+  #dropdowns * {
+    font-size: 14px;
+  }
+  #banner-text {
+    font-size: 12px;
+  }
+  #search-bar,
+  #logo,
+  #white-space-fill {
+    /* visibility: hidden; */
+    display: none;
+  }
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
@@ -8,7 +23,7 @@
  */
 
 * {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -31,16 +46,43 @@
 /* /////////////////////////////////////
 B.anner - With message */
 .banner {
-  background-color: rgb(238, 108, 77);
   width: 100%;
   position: sticky;
   top: 0;
   height: 25px;
   z-index: 2;
   text-align: center;
+
+  background: hsla(182, 82%, 93%, 1);
+
+  background: linear-gradient(
+    0deg,
+    hsla(182, 82%, 93%, 1) 5%,
+    hsla(12, 83%, 62%, 0.9) 20%,
+    hsla(12, 83%, 62%, 0.9) 80%,
+    hsla(182, 82%, 93%, 1) 95%
+  );
+
+  background: -moz-linear-gradient(
+    0deg,
+    hsla(182, 82%, 93%, 1) 5%,
+    hsla(12, 83%, 62%, 0.9) 20%,
+    hsla(12, 83%, 62%, 0.9) 80%,
+    hsla(182, 82%, 93%, 1) 95%
+  );
+
+  background: -webkit-linear-gradient(
+    0deg,
+    hsla(182, 82%, 93%, 1) 5%,
+    hsla(12, 83%, 62%, 0.9) 20%,
+    hsla(12, 83%, 62%, 0.9) 80%,
+    hsla(182, 82%, 93%, 1) 95%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#E0FBFC", endColorstr="#EE6C4D", GradientType=1 );
 }
 
-#banner-text {
+.banner-text {
   white-space: nowrap;
   color: white;
   font-size: 16px;
@@ -118,6 +160,8 @@ N.av Bar                   */
   height: 100px;
   width: 90px;
   text-decoration: none;
+  outline: none;
+  border-radius: 10px;
 
   text-align: center;
   justify-content: center;
@@ -126,23 +170,28 @@ N.av Bar                   */
   display: flex;
   flex-direction: column;
   white-space: nowrap;
+
+  transition: 0.25s ease;
 }
-#directions-link {
-  text-decoration: none;
-  padding-top: 6px;
+#directions {
+  /* text-decoration: none; */
+  /* padding-top: 6px; */
 }
 
 #directions:hover,
-#connect:hover {
+#connect:hover,
+#directions:focus,
+#connect:focus {
   /* border: 2px solid red; */
   border-radius: 10px;
+
   box-shadow: 3px 3px 10px rgb(61, 90, 128);
 }
 /* End N.av
 ///////////////////////////////////////////// */
 
 /* ////////////////////////////////////////////
-M.ENU BAR - Product dropdowns, search          */
+M.ENU BAR - Product d.ropdowns, s.earch          */
 
 .menu {
   /* border: 1px solid pink; */
@@ -172,6 +221,15 @@ M.ENU BAR - Product dropdowns, search          */
   /* box-sizing: border-box; */
   padding-left: 10px;
   border-radius: 10px;
+
+  transition: 0.25s ease;
+  transition: transform 0.25s ease-in;
+}
+
+#search-bar:focus,
+#search-bar:hover {
+  box-shadow: 3px 3px 10px rgb(61, 90, 128);
+  transform: scale(1.15, 1.01);
 }
 
 .dropdowns {
@@ -183,19 +241,17 @@ M.ENU BAR - Product dropdowns, search          */
   justify-content: space-evenly;
 }
 
-.beer,
-.wine,
-.liquor,
-.cordial {
+.dropdowns * {
   /* flex: 1 1 135px; */
   white-space: nowrap;
-  font-weight: 300;
-  font-size: 18px;
   text-transform: uppercase;
   padding: 0 5px;
 
   margin-left: 2px;
   margin-right: 2px;
+
+  font-weight: 300;
+  font-size: 18px;
 
   border: none;
   outline: none;
@@ -213,7 +269,7 @@ M.ENU BAR - Product dropdowns, search          */
 .liquor:focus,
 .cordial:hover,
 .cordial:focus {
-  box-shadow: 1px 1px 6px rgb(61, 90, 128);
+  box-shadow: 2px 2px 6px rgb(61, 90, 128);
   font-style: italic;
 }
 /* END M.ENU BAR 
@@ -239,6 +295,40 @@ Body - Images, Sales                   */
 /* //////////////////////////////////////
 Footer */
 
-.footer {
-  background: rgb(140, 157, 255);
+#footer {
+  margin: 2%;
+  padding-left: 2%;
+  font-weight: 600;
+  border-radius: 3px;
+
+  background: hsla(214, 35%, 37%, 1);
+
+  background: linear-gradient(
+    0deg,
+    hsla(214, 35%, 37%, 0.7) 0%,
+    hsla(202, 46%, 72%, 1) 7%,
+    hsla(182, 82%, 93%, 1) 52%,
+    hsla(12, 83%, 62%, 1) 87%,
+    hsla(218, 23%, 21%, 0.9) 100%
+  );
+
+  background: -moz-linear-gradient(
+    0deg,
+    hsla(214, 35%, 37%, 0.7) 0%,
+    hsla(202, 46%, 72%, 1) 7%,
+    hsla(182, 82%, 93%, 1) 52%,
+    hsla(12, 83%, 62%, 1) 87%,
+    hsla(218, 23%, 21%, 0.9) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    0deg,
+    hsla(214, 35%, 37%, 0.7) 0%,
+    hsla(202, 46%, 72%, 1) 7%,
+    hsla(182, 82%, 93%, 1) 52%,
+    hsla(12, 83%, 62%, 1) 87%,
+    hsla(218, 23%, 21%, 0.9) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#3d5a80", endColorstr="#98c1d9", GradientType=1 );
 }
