--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/*  */
 @media only screen and (max-width: 550px) {
   #menu-buttons * {
     font-size: 14px;
@@ -18,6 +19,20 @@
   #logo-text {
     text-align: center;
   }
+  #body-section {
+    max-height: 200px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #menu {
+    display: none;
+  }
+
+  #info-header,
+  #info-text p {
+    font-size: 10px;
+  }
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
@@ -30,7 +45,7 @@
  */
 
 * {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -56,7 +71,7 @@ B.anner - With message */
   width: 100%;
   position: sticky;
   top: 0;
-  height: 25px;
+  height: 40px;
   z-index: 2;
   text-align: center;
 
@@ -109,7 +124,7 @@ N.av Bar                   */
 */
 
 .nav * {
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
 }
 
 .nav {
@@ -296,6 +311,7 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
 
   padding: 15px 5px;
   position: absolute;
+  z-index: 2;
 
   display: flex;
   flex-direction: column;
@@ -305,17 +321,70 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
 
 /* //////////////////////////////////////
 Body - Images, Sales                   */
+.body * {
+  /* border: 1px solid pink; */
+}
 
 .body {
-  flex: 1 1 1000px;
+  /* border: 1px solid plum; */
+
+  width: 100%;
+
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-.body div {
-  flex: 1 1 300px;
+.body-section {
+  border: 10px outset rgb(93, 119, 165);
+  padding: 15px;
+  margin: 5px;
+
+  min-width: 250px;
+
+  max-height: 300px;
+  flex: 0 1 400px;
+  display: flex;
 }
+
+.info-container {
+  /* border: 1px solid blue; */
+
+  width: 50%;
+  padding: 10px;
+  overflow: auto;
+
+  position: relative;
+  flex-shrink: -6;
+}
+
+.image-container {
+  /* border: 1px solid green; */
+
+  position: relative;
+  width: 50%;
+}
+
+/* <img/> inside <a/> tag */
+#image-photo {
+  max-height: 100%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  min-height: 150px;
+  min-width: 150px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto auto auto;
+  overflow-y: hidden;
+}
+
+/* .info-header {
+  white-space: nowrap;
+} */
 
 /* End Body
 //////////////////////////////////////// */
@@ -324,8 +393,8 @@ Body - Images, Sales                   */
 Footer */
 
 #footer {
-  margin: 2%;
-  padding-left: 2%;
+  margin: 2% 0;
+  /* padding-left: 5px; */
   font-weight: 600;
   border-radius: 3px;
 
