--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap);
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
 
 /*
  font-family: 'Nunito', sans-serif;
@@ -8,8 +20,41 @@
  */
 /*  */
 
-* {
+/* stack contexts */
+
+#body {
+  z-index: 0;
+}
+
+#nav {
+  z-index: 1;
+}
+
+#menu-bar {
+  z-index: 2;
+}
+
+.banner-wrapper {
+  z-index: 3;
+  /* width: 100%; */
+
+  /* overflow: visible; */
+
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+
   overflow-x: hidden;
+}
+
+#hamburger-icon-container {
+  z-index: 8;
+}
+
+/* S lider index set w/React */
+
+* {
+  /* overflow-x: hidden; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -28,6 +73,9 @@
 .content {
   padding: 2%;
 }
+.content * {
+  overflow: hidden;
+}
 
 /* /////////////////////////////////////
 B.anner - With message */
@@ -35,24 +83,14 @@ B.anner - With message */
   text-align: center;
 
   width: 100%;
-  top: 0;
   height: 20px;
 
-  overflow: visible;
+  overflow: hidden;
 
   /* z-index: 3; */
-  position: sticky;
 
   background: hsla(182, 82%, 93%, 1);
   background: linear-gradient(
-    0deg,
-    hsla(182, 82%, 93%, 1) 5%,
-    hsla(12, 83%, 62%, 0.9) 20%,
-    hsla(12, 83%, 62%, 0.9) 80%,
-    hsla(182, 82%, 93%, 1) 95%
-  );
-
-  background: -moz-linear-gradient(
     0deg,
     hsla(182, 82%, 93%, 1) 5%,
     hsla(12, 83%, 62%, 0.9) 20%,
@@ -174,6 +212,9 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   /* min-height: 50px; */
   width: 100%;
 
+  position: relative;
+
+  overflow: visible;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row-reverse;
@@ -210,7 +251,7 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
 /* can this tag be removed at viewwidth < 500px? */
 .white-space-fill {
   /* border: 1px solid pink; */
-  flex: 1;
+  flex: 1 1;
 }
 
 .menu-buttons * {
@@ -259,7 +300,7 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   font-style: italic;
 }
 
-.drop-item {
+.drop-item a {
   text-decoration: none;
   transition: 0.25s ease;
 }
@@ -280,7 +321,7 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   /* display: flex;*/
   /* flex-direction: column;  */
 }
-.drop-menu div:hover {
+.drop-item :hover {
   font-style: italic;
   text-shadow: 1px 1px 3px rgb(41, 50, 65);
 }
@@ -298,6 +339,8 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   left: 0;
   overflow: hidden;
   position: absolute;
+
+  transition: 0.25s ease;
 }
 
 .hamburger-icon-container {
@@ -307,20 +350,20 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   visibility: hidden;
   overflow: hidden;
   position: absolute;
-  z-index: 5;
-  transition: 0.25s ease;
+  /* z-index: 5; */
+  /* transition: 0.25s ease; */
 
   /* transition-delay: 1s; */
 }
 
-.slide-container * {
+.slide-content-container * {
   /* display: none; */
 
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: visible;
 }
 
-.slide-container {
+.slide-content-container {
   translate: 1000px, 20px;
   overflow-x: hidden;
 
@@ -338,32 +381,44 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
 .slide-title {
   /* border: 1px solid pink; */
   /* color: white; */
+  width: 100vw;
 
   background-color: rgba(255, 255, 255);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   position: relative;
-  display: flex;
-  flex-direction: column;
 
-  height: 130px;
+  height: 150px;
+}
+
+.slide-title-text-container {
+  width: 100%;
+  /* height: 90%; */
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 #title-text {
+  /* border: 2px solid red; */
   color: #ee6c4d;
   font-size: 50px;
   font-weight: 600;
   font-style: italic;
-  text-decoration: dashed;
+  /* text-decoration: dashed; */
   text-transform: uppercase;
   text-shadow: -2px 2px 2px #293241;
   font-family: 'Faustina', serif;
   text-align: center;
 
+  height: 60px;
+  vertical-align: middle;
+
   /* border: 2px solid orange; */
   /* height: 60px; */
   position: relative;
   /* bottom: 0; */
-  text-align: center;
 }
 
 /* inside s lide, does not include h eader */
@@ -374,20 +429,21 @@ M.ENU BAR - Product d.ropdowns, s.earch          */
   /* position: absolute; */
 
   width: 100%;
-
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 
   transition: 1s ease;
 }
 
-.slidepage-button-container,
+.slidepage-button-container {
+}
+
 #slide-menu-button {
   /* border: 1px solid red; */
 
   height: 55px;
-  flex: 1 1 100%;
 }
 
 #slide-menu-button {
@@ -421,6 +477,8 @@ Body - Images, Sales                   */
 
   width: 100%;
 
+  size: -2;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -432,9 +490,9 @@ Body - Images, Sales                   */
   margin: 5px;
 
   min-width: 250px;
-
   max-height: 300px;
   flex: 0 1 400px;
+
   display: flex;
 }
 
@@ -466,17 +524,13 @@ Body - Images, Sales                   */
   min-height: 150px;
   min-width: 150px;
   position: absolute;
-  top: 0;
+  /* top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
   margin: 0 auto auto auto;
   overflow: hidden;
 }
-
-/* .info-header {
-  white-space: nowrap;
-} */
 
 /* End Body
 //////////////////////////////////////// */
@@ -493,15 +547,6 @@ Footer */
   background: hsla(214, 35%, 37%, 1);
 
   background: linear-gradient(
-    0deg,
-    hsla(214, 35%, 37%, 0.7) 0%,
-    hsla(202, 46%, 72%, 1) 7%,
-    hsla(182, 82%, 93%, 1) 52%,
-    hsla(12, 83%, 62%, 1) 87%,
-    hsla(218, 23%, 21%, 0.9) 100%
-  );
-
-  background: -moz-linear-gradient(
     0deg,
     hsla(214, 35%, 37%, 0.7) 0%,
     hsla(202, 46%, 72%, 1) 7%,
@@ -548,7 +593,6 @@ Footer */
 }
 
 @media only screen and (max-width: 520px) {
-  /* this is not working for some reason */
   #nav {
     flex-direction: column;
     align-content: center;
@@ -558,20 +602,11 @@ Footer */
   }
 
   .hamburger-icon-container * {
-    display: visible;
+    /* display: visible; */
   }
   .hamburger-icon-container {
     /* border: 2px solid rgb(41, 50, 65); */
     visibility: visible;
-  }
-
-  #title-img {
-    opacity: 0.6;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    box-shadow: -2px 2px 10px #293241;
-    overflow: visible;
   }
 
   #info-header,
@@ -579,3 +614,4 @@ Footer */
     font-size: 10px;
   }
 }
+
